Combo boxes on Windows should have a role of ROLE_SYSTEM_LISTBOX and their items a role of ROLE_SYSTEM_LISTITEM.

Workaround until dmazzoni@ completes combo box refactoring, since this is affecting real users.
Bug: 758441
Change-Id: I39337145cdd0ab09e7dd597da5391effa024e78d
R=dmazzoni@chromium.org
TESTED=Manually with Jaws and NVDA and a select element as described in the bug